fix(husky): update package

--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -28,9 +28,7 @@
       name="twitter:description"
       content="description"
     />-->
-    <title>Awesome react template</title>  
-
-
+    <title>Awesome react template</title>
 
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
